# kvdb.rs

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  agents.md  todos.md
.github/workflows/: ci.yml
.trae/documents/: kvdb-engine-implementation-plan.md
src/: benchmark.rs  cli.rs  cluster.rs  config.rs  encoding.rs  error.rs  http_server.rs  lib.rs  lua.rs  main.rs  protocol.rs  pubsub.rs  replication.rs  server.rs  storage.rs  thread_pool.rs  types.rs
src/cmd/: admin.rs  bitmap.rs  cluster.rs  hash.rs  list.rs  lua.rs  mod.rs  pubsub.rs  set.rs  stream.rs  string.rs  zset.rs
tests/: cmd_bitmap.rs  cmd_hash.rs  cmd_list.rs  cmd_set.rs  cmd_stream.rs  cmd_string.rs  cmd_zset.rs  http_api.rs  lua_eval.rs  namespace.rs  pubsub.rs  replication_cluster.rs  smoke.rs  storage_paging.rs  storage_perf.rs  system.rs  transactions.rs
